Write message on .env.example file

--- a/backend/src/main/resources/.env.example
+++ b/backend/src/main/resources/.env.example
@@ -2,3 +2,5 @@ MONGO_DATABASE=
 MONGO_USER=
 MONGO_PASSWORD=
 MONGO_CLUSTER=
+
+This is an example of the information in the .env file for reference.
