Added keystore and configured app to listen port 443

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.data.mongodb.database=${env.MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=./ourkeystore.p12
+server.ssl.key-store-password=${env.server.ssl.key-store-password}
+server.ssl.key-alias=beauty_key
+
